# caelian

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cael_csharp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  cael_csharp.slnx
cael_rust/: .gitignore  Cargo.toml
cael_rust/src/domain/: mod.rs
cael_rust/src/domain/model/: main_mod.rs  mod.rs  package.rs
cael_rust/src/domain/package/: constraint.rs  dependency.rs  identity.rs  install.rs  metadata.rs  mod.rs  package.rs
caelr/: .gitignore  Cargo.toml
caelr/src/domain/: mod.rs
cpk/: .gitignore  Cargo.toml  installed.json  packages.json
cpk/data/: packages.json
cpk/src/: lib.rs  main.rs
cpk/src/cli/: args.rs
cpk/src/commands/: install.rs  list.rs  mod.rs  packagelist.rs  search.rs  uninstall.rs  update.rs
cpk/src/core/: download.rs  installer.rs  mod.rs
cpk/src/db/: installed.rs  manifest.rs  mod.rs
cpk/src/models/: mod.rs  package.rs  package_database.rs
cpk/src/utils/: fs.rs  packager.rs
cpk_chsharp/: Program.cs  cpk_C#.slnx  cpk_csharp.csproj
cpk_csharp/: Program.cs  cpk_csharp.csproj  test.cs
cpk_rust/: Cargo.toml
cpk_rust/src/: lib.rs
cpk_rust/src/ffi/: mod.rs  packages_list_obtain.rs
cpk_rust/src/hello_c/: hello_c.rs  mod.rs  test.rs
cpk_rust/src/packages_data/: packages.yaml
cpk_rust/src/packages_list/: mod.rs  packages_list_obtain.rs  packages_list_struct.rs  test.rs
dll_test/: Cargo.toml
dll_test/src/: lib.rs
test_dll_C#/: Program.cs  test_dll_C#.csproj  test_dll_C#.slnx
wpf/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs
(+17 files in other folders)
