[package]
name = "caelian"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["chenianpeo"]
repository = "https://github.com/chenianpeo/caelian"
categories = ["development-tools"]

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# log = "0.4"
# thiserror = "1.0"
# anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"

[badges]
# CI badge can be added once workflow is running
# e.g. github-actions = { repository = "chenianpeo/caelian", workflow = "CI" }

# [workspace]
# members = ["crates/core-domain", "crates/solver", "crates/cli"]
